@@ -25,7 +25,6 @@ import java.io.IOException;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
@@ -52,7 +51,7 @@ public abstract class AbstractJournalTest {
         .build();
 
     protected static final TestEntry ENTRY = new TestEntry(32);
-    private static final Path PATH = Paths.get("target/test-logs/");
+    private static final Path PATH = Path.of("target", "test-logs");
 
     private final StorageLevel storageLevel;
     private final int maxSegmentSize;
